k8s/puasa-sunnah/services.yaml
apiVersion: v1
kind: Service 
metadata:
  name: puasa-sunnah
  labels:
    app: puasa-sunnah
