k8s/puasa-sunnah/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: puasa-sunnah
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      default-security-headers@kubernetescrd,
      default-rate-limit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: 
        - ${DOMAIN}
      secretName: puasa-sunnah-tls 
  rules:
    - host: ${DOMAIN}
      http:
        - paths:
            - path: / 
              pathType: Prefix
              backend:
                service: puasa-sunnah
                port:
                  number: 80
